Finished COEUS workplace.

--- a/planning/Diseasecard/.Ulysses-Group.plist
+++ b/planning/Diseasecard/.Ulysses-Group.plist
@@ -4,6 +4,12 @@
 <dict>
 	<key>createMarkedFile</key>
 	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>outline.md</string>
+		</array>
+	</array>
 	<key>userIconName</key>
 	<string>Sheets</string>
 </dict>
