Moved JAMIA back to main research :(

--- a/.Ulysses-Group.plist
+++ b/.Ulysses-Group.plist
@@ -8,6 +8,7 @@
 		<string>blog</string>
 		<string>research</string>
 		<string>planning</string>
+		<string>New Folder</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
