--- a/archive/blog/.Ulysses-Group.plist
+++ b/archive/blog/.Ulysses-Group.plist
@@ -30,6 +30,12 @@
 		<array>
 			<string>writing.md</string>
 		</array>
+		<array>
+			<string>travelingwithoutmoving.md</string>
+		</array>
+		<array>
+			<string>What are you looking for.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
