--- a/blog/Parenthood/.Ulysses-Group.plist
+++ b/blog/Parenthood/.Ulysses-Group.plist
@@ -2,18 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>countingGoal</key>
+	<dict>
+		<key>counterIdentifier</key>
+		<string>words</string>
+		<key>targetResult</key>
+		<integer>1500</integer>
+		<key>type</key>
+		<string>close_to</string>
+	</dict>
 	<key>createMarkedFile</key>
 	<false/>
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>linkedregistries.md</string>
-		</array>
-		<array>
-			<string>omicsis.md</string>
+			<string>onfatherhood.md</string>
 		</array>
 	</array>
-	<key>userIconName</key>
-	<string>Gear</string>
 </dict>
 </plist>
