--- a/blog/Heroes & Villains/.Ulysses-Group.plist
+++ b/blog/Heroes & Villains/.Ulysses-Group.plist
@@ -2,30 +2,27 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>countingGoal</key>
+	<dict>
+		<key>counterIdentifier</key>
+		<string>words</string>
+		<key>targetResult</key>
+		<integer>3000</integer>
+		<key>type</key>
+		<string>close_to</string>
+	</dict>
 	<key>createMarkedFile</key>
 	<false/>
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>automation.md</string>
+			<string>Heroes.md</string>
 		</array>
 		<array>
-			<string>hero.md</string>
-		</array>
-		<array>
-			<string>onfatherhood.md</string>
-		</array>
-		<array>
-			<string>travelingwithoutmoving.md</string>
-		</array>
-		<array>
-			<string>villain.md</string>
-		</array>
-		<array>
-			<string>What are you looking for.md</string>
+			<string>Villains.md</string>
 		</array>
 	</array>
 	<key>userIconName</key>
-	<string>Notes</string>
+	<string>Conversation</string>
 </dict>
 </plist>
