Finished JAMIA paper Introduction and Conclusion.

--- a/archive/research/.Ulysses-Group.plist
+++ b/archive/research/.Ulysses-Group.plist
@@ -32,6 +32,9 @@
 		<array>
 			<string>h2020.md</string>
 		</array>
+		<array>
+			<string>linkedregistries.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
