--- a/blog/.Ulysses-Group.plist
+++ b/blog/.Ulysses-Group.plist
@@ -2,13 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>childOrder</key>
-	<array>
-		<string>Heroes &amp; Villains</string>
-		<string>Parenthood</string>
-	</array>
+	<key>countingGoal</key>
+	<dict>
+		<key>counterIdentifier</key>
+		<string>words</string>
+		<key>targetResult</key>
+		<integer>1500</integer>
+		<key>type</key>
+		<string>at_least</string>
+	</dict>
 	<key>createMarkedFile</key>
 	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>christmas.md</string>
+		</array>
+	</array>
 	<key>userIconName</key>
 	<string>Notes</string>
 </dict>
