Finishing JAMIA's review draft 0.

--- a/archive/blog/.Ulysses-Group.plist
+++ b/archive/blog/.Ulysses-Group.plist
@@ -41,6 +41,9 @@
 		<array>
 			<string>What are you looking for.md</string>
 		</array>
+		<array>
+			<string>christmas.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
