--- a/blog/.Ulysses-Group.plist
+++ b/blog/.Ulysses-Group.plist
@@ -16,7 +16,7 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>christmas.md</string>
+			<string>Fear.md</string>
 		</array>
 	</array>
 	<key>userIconName</key>
