Started CISTI2015 materials.

--- a/.Ulysses-Group.plist
+++ b/.Ulysses-Group.plist
@@ -8,7 +8,7 @@
 		<string>blog</string>
 		<string>research</string>
 		<string>planning</string>
-		<string>New Folder</string>
+		<string>infinity</string>
 	</array>
 	<key>createMarkedFile</key>
 	<false/>
