--- a/infinity/.Ulysses-Group.plist
+++ b/infinity/.Ulysses-Group.plist
@@ -2,24 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>countingGoal</key>
-	<dict>
-		<key>counterIdentifier</key>
-		<string>words</string>
-		<key>targetResult</key>
-		<integer>1500</integer>
-		<key>type</key>
-		<string>at_least</string>
-	</dict>
 	<key>createMarkedFile</key>
 	<false/>
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>Fear.md</string>
+			<string>ARiiP.md</string>
 		</array>
 	</array>
 	<key>userIconName</key>
-	<string>Character</string>
+	<string>Notes</string>
 </dict>
 </plist>
