--- a/research/cisti/.Ulysses-Group.plist
+++ b/research/cisti/.Ulysses-Group.plist
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>createMarkedFile</key>
+	<false/>
+	<key>sheetClusters</key>
+	<array>
+		<array>
+			<string>integrationasaservice.md</string>
+		</array>
+		<array>
+			<string>exploringpatientleveldata.md</string>
+		</array>
+	</array>
+</dict>
 </plist>
