--- a/archive/ariip/.Ulysses-Group.plist
+++ b/archive/ariip/.Ulysses-Group.plist
@@ -7,10 +7,8 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>Outline.md</string>
+			<string>ARiiP.md</string>
 		</array>
 	</array>
-	<key>userIconName</key>
-	<string>Calendar2</string>
 </dict>
 </plist>
