--- a/infinity/.Ulysses-Group.plist
+++ b/infinity/.Ulysses-Group.plist
@@ -7,10 +7,10 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>ARiiP.md</string>
+			<string>ariipusecases.md</string>
 		</array>
 	</array>
 	<key>userIconName</key>
-	<string>Notes</string>
+	<string>Pacman</string>
 </dict>
 </plist>
