--- a/planning/.Ulysses-Group (Pedro’s MacBook Pro's conflicted copy 2015-02-19).plist
+++ b/planning/.Ulysses-Group (Pedro’s MacBook Pro's conflicted copy 2015-02-19).plist
@@ -2,15 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>childOrder</key>
+	<array>
+		<string>COEUS</string>
+		<string>Diseasecard</string>
+		<string>i2x</string>
+		<string>WAVe</string>
+	</array>
 	<key>createMarkedFile</key>
 	<false/>
-	<key>sheetClusters</key>
-	<array>
-		<array>
-			<string>Outline.md</string>
-		</array>
-	</array>
-	<key>userIconName</key>
-	<string>Calendar2</string>
 </dict>
 </plist>
