--- a/planning/.Ulysses-Group.plist
+++ b/planning/.Ulysses-Group.plist
@@ -12,6 +12,6 @@
 	<key>createMarkedFile</key>
 	<false/>
 	<key>userIconName</key>
-	<string>Flag</string>
+	<string>Calendar1</string>
 </dict>
 </plist>
