--- a/publishing/.Ulysses-Group.plist
+++ b/publishing/.Ulysses-Group.plist
@@ -7,10 +7,10 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>Pushing reset on life.md</string>
+			<string>In Time.md</string>
 		</array>
 		<array>
-			<string>ResearchImpact.md</string>
+			<string>Pushing reset on life.md</string>
 		</array>
 		<array>
 			<string>Podcast.md</string>
