--- a/infinity/.Ulysses-Group.plist
+++ b/infinity/.Ulysses-Group.plist
@@ -7,7 +7,7 @@
 	<key>sheetClusters</key>
 	<array>
 		<array>
-			<string>ariipusecases.md</string>
+			<string>CoimbraGenomics.md</string>
 		</array>
 	</array>
 	<key>userIconName</key>
